--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,38 @@
-Flask
-Flask-Session
-SQLAlchemy
+astroid==2.4.2
+cachelib==0.1.1
+certifi==2020.6.20
+chardet==3.0.4
+click==7.1.2
+coolname==1.1.0
+decorator==4.4.2
+docx==0.2.4
+Flask==1.1.2
+Flask-Session==0.3.2
+Flask-SQLAlchemy==2.4.4
+Flask-WTF==0.14.3
+gunicorn==20.0.4
+idna==2.10
+infinity==1.5
+intervals==0.9.0
+isort==5.6.4
+itsdangerous==1.1.0
+Jinja2==2.11.2
+lazy-object-proxy==1.4.3
+lxml==4.6.1
+MarkupSafe==1.1.1
+mccabe==0.6.1
 Pillow==7.1.2
 psycopg2-binary==2.8.5
+pylint==2.6.0
+python-docx==0.8.10
 requests==2.23.0
+six==1.15.0
+SQLAlchemy==1.3.19
+toml==0.10.1
+urllib3==1.25.10
+validators==0.18.1
 Werkzeug==0.16.0
-flask_sqlalchemy
-gunicorn
+Wikipedia-API==0.5.4
+wrapt==1.12.1
+WTForms==2.3.3
+WTForms-Components==0.10.4
